# pybrawl/models/__init__.py
@@ -14,7 +14,6 @@
 from __future__ import absolute_import
 
 # import models into model package
-from pybrawl.models.arena import Arena
 from pybrawl.models.battle_log_entry import BattleLogEntry
 from pybrawl.models.battle_log_team import BattleLogTeam
 from pybrawl.models.brawler import Brawler
@@ -25,5 +24,6 @@ from pybrawl.models.club_base import ClubBase
 from pybrawl.models.club_member import ClubMember
 from pybrawl.models.club_member_list import ClubMemberList
 from pybrawl.models.error import Error
+from pybrawl.models.player_detail import PlayerDetail
 from pybrawl.models.search_paging import SearchPaging
 from pybrawl.models.search_paging_cursors import SearchPagingCursors
